--- a/services/repo_manager/Dockerfile
+++ b/services/repo_manager/Dockerfile
@@ -3,7 +3,8 @@
 # VENDOR                Giacomo Marciani
 # VERSION               1.0.0
 
-FROM ubuntu:latest
+#FROM ubuntu:latest
+FROM python:3.6
 
 LABEL Description="Smart Scaler / Repo Manager" Vendor="Giacomo Marciani" Version="1.0.0"
 
@@ -19,7 +20,7 @@ COPY ./requirements.txt ./requirements.txt
 
 RUN pip install -r requirements.txt
 
-EXPOSE 18002
+EXPOSE 18003
 
 ENTRYPOINT [ "python" ]
 
