--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 
 title: Smart Scaler
-description: A smart elasticity service for Kubernetes, leveraging Reinforcement Learning.
+description: A smart auto-scaling service for Kubernetes, leveraging Reinforcement Learning
 
 show_downloads: True
 
