--- a/kubernetes/controllers/smartscaler-crd.yaml
+++ b/kubernetes/controllers/smartscaler-crd.yaml
@@ -31,7 +31,7 @@ spec:
               minLength: 1
             algorithm:
               type: string
-              minLength: 1
+              pattern: '^Cyclic$'
             parameters:
               type: object
             replicas:
